blocks/header/header.css
/* header and nav layout */
.header.block .nav-wrapper {
  background-color: #fff;
  width: 100%;
  z-index: 2;
  position: fixed;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
}

.header.block nav {
  box-sizing: border-box;
  display: grid;
  grid-template:
    'hamburger brand tools' var(--nav-height)
    'sections sections sections' 1fr / auto 1fr auto;
  align-items: center;
  gap: 0 24px;
  margin: auto;
  max-width: 1728px;
  height: var(--nav-height);
  padding: 0 24px;
  font-family: var(--body-font-family);
}

.header.block nav[aria-expanded='true'] {
  grid-template:
    'hamburger brand' var(--nav-height)
    'sections sections' 1fr
    'tools tools' var(--nav-height) / auto 1fr;
  overflow-y: auto;
  min-height: 100dvh;
}

@media (width >= 900px) {
  .header.block .nav-wrapper {
    position: relative;
  }

  .header.block nav,
  .header.block nav[aria-expanded='true'] {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 0;
    max-width: 1728px;
    padding: 8px 40px;
    min-height: 0;
    overflow: visible;
    height: var(--nav-height);
  }
}

.header.block nav p {
  margin: 0;
  line-height: 1;
}

.header.block nav a:any-link {
  color: currentcolor;
  text-decoration: none;
}

/* hamburger */
.header.block nav .nav-hamburger {
  grid-area: hamburger;
  height: 22px;
  display: flex;
  align-items: center;
}

.header.block nav .nav-hamburger button {
  height: 22px;
  margin: 0;
  border: 0;
  border-radius: 0;
  padding: 0;
  background-color: #fff;
  color: inherit;
  overflow: initial;
  text-overflow: initial;
  white-space: initial;
}

.header.block nav .nav-hamburger-icon,
.header.block nav .nav-hamburger-icon::before,
.header.block nav .nav-hamburger-icon::after {
  box-sizing: border-box;
  display: block;
  position: relative;
  width: 20px;
}

.header.block nav .nav-hamburger-icon::before,
.header.block nav .nav-hamburger-icon::after {
  content: '';
  position: absolute;
  background: currentcolor;
}

.header.block nav[aria-expanded='false'] .nav-hamburger-icon,
.header.block nav[aria-expanded='false'] .nav-hamburger-icon::before,
.header.block nav[aria-expanded='false'] .nav-hamburger-icon::after {
  height: 2px;
  border-radius: 2px;
  background: currentcolor;
}

.header.block nav[aria-expanded='false'] .nav-hamburger-icon::before {
  top: -6px;
}

.header.block nav[aria-expanded='false'] .nav-hamburger-icon::after {
  top: 6px;
}

.header.block nav[aria-expanded='true'] .nav-hamburger-icon {
  height: 22px;
}

.header.block nav[aria-expanded='true'] .nav-hamburger-icon::before,
.header.block nav[aria-expanded='true'] .nav-hamburger-icon::after {
  top: 3px;
  left: 1px;
  transform: rotate(45deg);
  transform-origin: 2px 1px;
  width: 24px;
  height: 2px;
  border-radius: 2px;
}

.header.block nav[aria-expanded='true'] .nav-hamburger-icon::after {
  top: unset;
  bottom: 3px;
  transform: rotate(-45deg);
}

@media (width >= 900px) {
  .header.block nav .nav-hamburger {
    display: none;
    visibility: hidden;
  }
}

/* brand */
.header.block .nav-brand {
  grid-area: brand;
  flex-basis: auto;
  flex-shrink: 0;
  font-size: var(--heading-font-size-s);
  font-weight: 700;
  line-height: 1;
}

.header.block nav .nav-brand img {
  width: auto;
  height: 56px;
  object-fit: contain;
}

.header.block nav .nav-brand .icon-logo,
.header.block nav .nav-brand .icon-logo img {
  display: block;
  width: auto;
  height: 56px;
}

/* sections */
.header.block nav .nav-sections {
  grid-area: sections;
  flex: 1 1 auto;
  display: none;
  visibility: hidden;
}

.header.block nav[aria-expanded='true'] .nav-sections {
  display: block;
  visibility: visible;
  align-self: start;
}

.header.block nav .nav-sections ul {
  list-style: none;
  padding-left: 0;
  font-size: 16px;
}

.header.block nav .nav-sections ul > li {
  font-weight: 400;
}

.header.block nav .nav-sections ul > li > ul {
  margin-top: 0;
}

.header.block nav .nav-sections ul > li > ul > li {
  font-weight: 400;
}

@media (width >= 900px) {
  .header.block nav .nav-sections {
    display: block;
    visibility: visible;
    white-space: nowrap;
    margin-left: 32px;
  }

  .header.block nav[aria-expanded='true'] .nav-sections {
    align-self: unset;
  }

  .header.block nav .nav-sections .nav-drop {
    position: relative;
    padding-right: 16px;
    cursor: pointer;
  }

  .header.block nav .nav-sections .nav-drop::after {
    content: '';
    display: inline-block;
    position: absolute;
    top: 0.5em;
    right: 2px;
    transform: rotate(135deg);
    width: 6px;
    height: 6px;
    border: 2px solid currentcolor;
    border-radius: 0 1px 0 0;
    border-width: 2px 2px 0 0;
  }

  .header.block nav .nav-sections .nav-drop[aria-expanded='true']::after {
    top: unset;
    bottom: 0.5em;
    transform: rotate(315deg);
  }

  .header.block nav .nav-sections ul {
    display: flex;
    gap: 32px;
    margin: 0;
    align-items: center;
  }

  .header.block nav .nav-sections .default-content-wrapper > ul > li {
    flex: 0 1 auto;
    position: relative;
  }

  .header.block nav .nav-sections .default-content-wrapper > ul > li > ul {
    display: none;
    position: relative;
  }

  .header.block nav .nav-sections .default-content-wrapper > ul > li[aria-expanded='true'] > ul {
    display: block;
    position: absolute;
    left: -24px;
    width: 240px;
    top: 150%;
    padding: 16px;
    background-color: #fff;
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
    white-space: initial;
    border-radius: 4px;
  }

  .header.block nav .nav-sections .default-content-wrapper > ul > li > ul::before {
    content: '';
    position: absolute;
    top: -8px;
    left: 16px;
    width: 0;
    height: 0;
    border-left: 8px solid transparent;
    border-right: 8px solid transparent;
    border-bottom: 8px solid #fff;
  }

  .header.block nav .nav-sections .default-content-wrapper > ul > li > ul > li {
    padding: 8px 0;
  }
}

/* tools */
.header.block nav .nav-tools {
  grid-area: tools;
  margin-left: auto;
  font-size: 14px;
}

.header.block nav .nav-tools a {
  color: #000;
  font-weight: 400;
}

@media (width >= 900px) {
  .header.block nav .nav-tools .default-content-wrapper {
    display: flex;
    align-items: center;
    gap: 28px;
  }

  .header.block nav .nav-tools p {
    white-space: nowrap;
    margin: 0;
  }
}

